fix: fixes `InaccessibleObjectException` in tests on JDK 17+