@@ -253,6 +253,10 @@ shadowJar {
 
 test {
 	useJUnitPlatform()
+	jvmArgs = [
+			"--add-opens", "java.base/java.lang=ALL-UNNAMED",
+			"--add-opens", "java.base/java.util=ALL-UNNAMED"
+	]
 	//testLogging.showStandardStreams = true
 
 	jacoco {
